# VeriSpector

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py  models.py  services.py
