[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dnspython>=2.8.0",
    "fastapi[all]>=0.119.1",
    "python-dotenv>=1.1.1",
    "python-whois>=0.9.6",
    "redis>=6.4.0",
    "requests>=2.32.5",
]
